--- a/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
@@ -420,6 +420,7 @@ info:
       x: 732
       y: 579
 
+# 82-89 segment
     - pin: 82a
       x: 2724
       y: 585
@@ -436,6 +437,69 @@ info:
       x: 2958
       y: 585
 
+    - pin: 86a
+      x: 3048
+      y: 585
+
+    - pin: 87a
+      x: 3123
+      y: 585
+
+    - pin: 88a
+      x: 3201
+      y: 585
+
     - pin: 89a
       x: 3282
       y: 585
+
+# 90-97 segment
+    - pin: 90a
+      x: 2724
+      y: 507
+
+    - pin: 91a
+      x: 2802
+      y: 507
+
+    - pin: 92a
+      x: 2877
+      y: 507
+
+    - pin: 93a
+      x: 2958
+      y: 507
+
+    - pin: 94a
+      x: 3048
+      y: 507
+
+    - pin: 95a
+      x: 3123
+      y: 507
+
+    - pin: 96a
+      x: 3201
+      y: 507
+
+    - pin: 97a
+      x: 3282
+      y: 507
+
+
+    - pin: 115a
+      x: 3700
+      y: 585
+
+    - pin: 116a
+      x: 3882
+      y: 585
+
+
+    - pin: 120a
+      x: 3700
+      y: 261
+
+    - pin: 121a
+      x: 3882
+      y: 261
