--- a/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
@@ -410,11 +410,94 @@ info:
       x: 456
       y: 250
 
+# 6-24 segment
+    - pin: 6a
+      x: 2193
+      y: 250
 
+    - pin: 7a
+      x: 2113
+      y: 250
+
+    - pin: 8a
+      x: 2033
+      y: 250
+
+    - pin: 9a
+      x: 1953
+      y: 250
+
+    - pin: 10a
+      x: 1873
+      y: 250
+
+    - pin: 11a
+      x: 1793
+      y: 250
+
+    - pin: 12a
+      x: 1713
+      y: 250
+
+    - pin: 13a
+      x: 1633
+      y: 250
+
+    - pin: 14a
+      x: 1553
+      y: 250
+
+    - pin: 15a
+      x: 1473
+      y: 250
+
+    - pin: 16a
+      x: 1393
+      y: 250
+
+    - pin: 17a
+      x: 1313
+      y: 250
+
+    - pin: 18a
+      x: 1233
+      y: 250
+
+    - pin: 19a
+      x: 1153
+      y: 250
+
+    - pin: 20a
+      x: 1073
+      y: 250
+
+    - pin: 21a
+      x: 993
+      y: 250
+
+    - pin: 22a
+      x: 913
+      y: 250
+
+    - pin: 23a
+      x: 833
+      y: 250
+
+    - pin: 24a
+      x: 753
+      y: 250
+
+
+
+
+# 25-43 segment
+
+# 44-62 segment
     - pin: 62a
       x: 732
       y: 495
 
+# 63-81 segment
 
     - pin: 81a
       x: 732
@@ -486,6 +569,71 @@ info:
       x: 3282
       y: 507
 
+# 98-105 segment
+    - pin: 98a
+      x: 2724
+      y: 336
+
+    - pin: 99a
+      x: 2802
+      y: 336
+
+    - pin: 100a
+      x: 2877
+      y: 336
+
+    - pin: 101a
+      x: 2958
+      y: 336
+
+    - pin: 102a
+      x: 3048
+      y: 336
+
+    - pin: 103a
+      x: 3123
+      y: 336
+
+    - pin: 104a
+      x: 3201
+      y: 336
+
+    - pin: 105a
+      x: 3282
+      y: 336
+
+# 106-113 segment
+    - pin: 106a
+      x: 2724
+      y: 258
+
+    - pin: 107a
+      x: 2802
+      y: 258
+
+    - pin: 108a
+      x: 2877
+      y: 258
+
+    - pin: 109a
+      x: 2958
+      y: 258
+
+    - pin: 110a
+      x: 3048
+      y: 258
+
+    - pin: 111a
+      x: 3123
+      y: 258
+
+    - pin: 112a
+      x: 3201
+      y: 258
+
+    - pin: 113a
+      x: 3282
+      y: 258
 
     - pin: 115a
       x: 3700
@@ -495,6 +643,17 @@ info:
       x: 3882
       y: 585
 
+    - pin: 117a
+      x: 3615
+      y: 414
+
+    - pin: 118a
+      x: 3780
+      y: 414
+
+    - pin: 119a
+      x: 3516
+      y: 261
 
     - pin: 120a
       x: 3700
