making gen_config happier

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@
 *.sh text eol=lf
 *.iml text eol=lf
 *.txt text eol=lf
+*.yaml text eol=lf
 *.ini text eol=lf
 *.input text eol=lf
 *.rules text eol=lf
