--- a/.github/workflows/build-rusEFI-console.yaml
+++ b/.github/workflows/build-rusEFI-console.yaml
@@ -20,6 +20,10 @@ jobs:
       - name: Install Tools
         run: sudo apt-get install ncftp
 
+      - name: Generate Java (Antlr)
+        working-directory: ./java_tools/configuration_definition
+        run: ant antlr
+
       - name: Build console
         working-directory: ./java_console
         run: ant server_jar
