--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,9 +29,8 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/simulator/build/rusefi_simulator",
-			// uncomment args below to only debug a particular test
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/",
+			"cwd": "${workspaceFolder}/simulator/",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
