--- a/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
@@ -1,4 +1,11 @@
 pins:
+  - pin: MR
+    id: GPIOI_2
+    class: outputs
+    ts_name: Main Relay
+    function: OUT_MAIN
+    type: ls
+
   - pin: 1a
     function: GND
     type: GND
@@ -46,11 +53,7 @@ pins:
     type: inj
     
   - pin: 21a
-    id: GPIOI_2
-    class: outputs
-    ts_name: 21 - Main Relay
-    function: OUT_MAIN
-    type: ls
+    function: Main relay A
    
   - pin: 22a
     id: GPIOI_0
@@ -59,11 +62,7 @@ pins:
     function: OUT_VVT1_1
 
   - pin: 23a
-    id: GPIOI_2
-    class: outputs
-    ts_name: 23 - MAIN 
-    function: OUT_MAIN
-    type: ls
+    function: Main relay B
 
   - pin: 24a
     id: GPIOF_14
