https://github.com/rusefi/hellen121vag/issues/44

--- a/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
@@ -35,7 +35,7 @@ pins:
 
   - pin: 14a
     id: EFI_ADC_0
-    class: analog_input
+    class: analog_inputs
     ts_name: 14 - O2
     function: O2 sensor signal
     
