--- a/firmware/config/boards/hellen/hellen64_miataNA6_94/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen64_miataNA6_94/connectors/main.yaml
@@ -113,13 +113,13 @@ pins:
 
   - pin: 2B
     id: GPIOF_7
-    class: analog_input
+    class: analog_inputs
     ts_name: 2B - Knock Sensor
     function: Knock Sensor Input
     
   - pin: 2L
     id: GPIOE_13
-    class: analog_input
+    class: analog_inputs
     ts_name: 2L - Flex Fuel
     function: Flex Fuel Input
   
