--- a/firmware/config/boards/hellen/hellen121nissan/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen121nissan/connectors/main.yaml
@@ -2,6 +2,7 @@ pins:
   - pin: 1a
     function: GND
     type: GND
+    color: black
 
   - pin: 4a
     class: outputs
@@ -26,6 +27,7 @@ pins:
     id: [GPIOA_6]
     class: [event_inputs]
     ts_name: 14 - Cam Left
+    color: pink
 
   - pin: 21a
     id: GPIOD_9
@@ -54,6 +56,7 @@ pins:
     id: [GPIOA_7]
     class: [event_inputs]
     ts_name: 33 - Cam Right
+    color: pink
 
   - pin: 40a
     id: GPIOF_12
@@ -78,9 +81,11 @@ pins:
 
   - pin: 47a
     function: +5v
+    color: orange
 
   - pin: 48a
     function: +5v
+    color: orange
 
 
   - pin: 50a
@@ -160,17 +165,21 @@ pins:
   - pin: 86a
     function: CAN bus low
     type: can
+    color: yellow
 
   - pin: 90a
     function: +5v
+    color: orange
 
   - pin: 91a
     function: +5v
+    color: orange
 
 
   - pin: 94a
     function: CAN bus high
     type: can
+    color: yellow
 
   - pin: 98a
 # IN_AUX2 AIN21 A21 PC4
