--- a/.github/workflows/build-unit-tests.yaml
+++ b/.github/workflows/build-unit-tests.yaml
@@ -93,4 +93,4 @@ jobs:
 
     - name: Run Tests (sharded)
       working-directory: ./unit_tests/
-      run: ./run_sharded_tests.sh
+      run: bash ./run_sharded_tests.sh
