shard unit tests (#2906)
* scripts

* it found problems!

* off by one

* call bash maybe?

--- a/.github/workflows/build-unit-tests.yaml
+++ b/.github/workflows/build-unit-tests.yaml
@@ -90,3 +90,7 @@ jobs:
       with:
         github_token: ${{ github.token }}
         branch: master
+
+    - name: Run Tests (sharded)
+      working-directory: ./unit_tests/
+      run: bash ./run_sharded_tests.sh
