--- a/firmware/bootloader/src/Makefile
+++ b/firmware/bootloader/src/Makefile
@@ -116,7 +116,7 @@ endif
 
 # Define project name here
 PROJECT = bootloader
-PROJECT_DIR = ..
+PROJECT_DIR = ../..
 
 # Imported source files and paths
 CHIBIOS = $(PROJECT_DIR)/ChibiOS
@@ -210,7 +210,7 @@ TCPPSRC =
 ASMXSRC = $(STARTUPASM) $(PORTASM) $(OSALASM)
 
 INCDIR = $(ALLINC) \
-	.. \
+	../.. \
 	$(CHIBIOS)/os/various \
 	$(CHIBIOS)/os/ex/ST \
 	$(CHIBIOS)/os/hal/lib/peripherals/sensors \
