Revert "Chibios-Contrib path is also relative to PROJECT_DIR"
This reverts commit 8cab5c5508df5fb57b2fe86d80589a3081cbf56c.

--- a/firmware/bootloader/src/Makefile
+++ b/firmware/bootloader/src/Makefile
@@ -121,7 +121,7 @@ PROJECT_DIR = ../..
 # Imported source files and paths
 CHIBIOS = $(PROJECT_DIR)/ChibiOS
 # todo: looks like 'CHIBIOS_CONTRIB' path is universal shall we defined it only once?
-CHIBIOS_CONTRIB = $(PROJECT_DIR)/ChibiOS-Contrib
+CHIBIOS_CONTRIB = $(CHIBIOS)/../ChibiOS-Contrib
 
 RULESPATH = $(CHIBIOS)/os/common/startup/ARMCMx/compilers/GCC/mk
 RULESFILE = $(RULESPATH)/rules.mk
