Fix bootloader build (#2907)
* Chibios-Contrib fix

* hm?!!

* Chibios-Contrib path is also relative to PROJECT_DIR

* Revert "Chibios-Contrib path is also relative to PROJECT_DIR"

This reverts commit 8cab5c5508df5fb57b2fe86d80589a3081cbf56c.

--- a/firmware/bootloader/src/Makefile
+++ b/firmware/bootloader/src/Makefile
@@ -116,7 +116,7 @@ endif
 
 # Define project name here
 PROJECT = bootloader
-PROJECT_DIR = ..
+PROJECT_DIR = ../..
 
 # Imported source files and paths
 CHIBIOS = $(PROJECT_DIR)/ChibiOS
@@ -137,7 +137,7 @@ include $(CHIBIOS)/os/license/license.mk
 include $(CHIBIOS)/os/common/startup/ARMCMx/compilers/GCC/mk/$(CPU_STARTUP)
 # HAL-OSAL files (optional).
 include $(CHIBIOS_CONTRIB)/os/hal/hal.mk
-include $(CHIBIOS)/os/hal/ports/STM32/$(CPU_PLATFORM)
+include $(CPU_PLATFORM)
 include $(CHIBIOS)/os/hal/osal/rt-nil/osal.mk
 # RTOS files (optional).
 include $(CHIBIOS)/os/rt/rt.mk
@@ -210,7 +210,7 @@ TCPPSRC =
 ASMXSRC = $(STARTUPASM) $(PORTASM) $(OSALASM)
 
 INCDIR = $(ALLINC) \
-	.. \
+	../.. \
 	$(CHIBIOS)/os/various \
 	$(CHIBIOS)/os/ex/ST \
 	$(CHIBIOS)/os/hal/lib/peripherals/sensors \
